# fluentogram

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  example_file_storage.py  pyproject.toml  setup.py
.github/workflows/: poetry-publish.yml  tests.yml
example/: BaseUsage.md  KeyValueTranslatorHubUsage.md  MRE.py  TranslatorHub.md  TranslatorRunner.md  TypingGenerator.md
fluentogram/: __init__.py  __main__.py  exceptions.py  runner.py  translator.py  translator_hub.py
fluentogram/abc/: __init__.py  runner.py  translator.py  translator_hub.py
fluentogram/cli/: __init__.py  cli.py  ftl_to_stub.py  main.py
fluentogram/exceptions/: __init__.py  root_locale_translator.py
fluentogram/impl/: runner.py  translator.py  translator_hub.py
fluentogram/impl/transformers/: __init__.py  datetime_transformer.py  money_transformer.py
fluentogram/misc/: __init__.py  timezones.py
fluentogram/nats/: hub.py  mock.py  storage.py
fluentogram/src/: __init__.py
fluentogram/src/abc/: __init__.py  misc.py  runner.py  storage.py  transformer.py  translator.py  translator_hub.py
fluentogram/src/impl/: __init__.py  attrib_tracer.py  filter.py  runner.py  stubs_translator_runner.py  translator.py  translator_hub.py
fluentogram/src/impl/storages/: __init__.py  nats_storage.py
fluentogram/src/impl/transator_hubs/: __init__.py  kv_translator_hub.py
fluentogram/src/impl/transformers/: __init__.py  datetime_transformer.py  money_transformer.py
fluentogram/storage/: __init__.py  base.py  file.py  memory.py
fluentogram/stub_generator/: generator.py  parser.py  renderable.py  stubs.py  templates.py  tree.py
fluentogram/tests/: __init__.py  test_stub_generation.py  test_usage.py
fluentogram/transformers/: __init__.py  base.py  datetime.py  money.py
fluentogram/typing_generator/: __init__.py  parsed_ftl.py  renderable_items.py  stubs.py  translation_dto.py  tree.py
scripts/: lint-pre-commit.sh  lint.sh
tests/: test_basic_usage.py  test_deprecated_kv_translator.py  test_file_storage.py  test_generator.py  test_transformers.py  test_update.py
tests/assets/: conflict.ftl  conflict_in_prefix.ftl  reference_with_args.ftl  simple.ftl  test.ftl
tests/assets/locales/en/: main.ftl
