[tool.poetry]
name = "fluentogram"
version = "1.1.11"
description = "A proper way to use an i18n mechanism with Aiogram3."
authors = ["Aleks"]
license = "MIT"
repository = "https://github.com/Arustinal/fluentogram"

[tool.poetry.scripts]
i18n = 'fluentogram.cli:cli'

[tool.poetry.dependencies]
python = "^3.9"
fluent-compiler = "^0.3"
watchdog = "^2.3.0"
ordered-set = "^4.1.0"
nats-py = "^2.9.0"
typing-extensions = "^4.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
