[project]
name = "fluentogram"
version = "1.1.12"
description = "A proper way to use an i18n mechanism with Aiogram3."
authors = [{ name = "Aleks" }]
requires-python = "~=3.9"
license = "MIT"
dependencies = [
    "fluent-compiler~=1.1",
    "watchdog>=2.3.0,<3",
    "ordered-set>=4.1.0,<5",
    "nats-py>=2.9.0,<3",
    "typing-extensions>=4.12.2,<5",
]

[project.urls]
Repository = "https://github.com/Arustinal/fluentogram"

[project.scripts]
i18n = "fluentogram.cli:cli"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
